--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="login-box">
         <header>
-            <img src="/img/logo/chill-logo.svg" alt="chill-logo">
+            <img class="logo" src="/img/logo/chill-logo.svg" alt="chill-logo">
             <div class="title">
                 <h3>Masuk</h3>
                 <p>Selamat datang kembali!</p>
@@ -38,7 +38,7 @@
                 <button class="buttons">Masuk</button>
                 <p>Atau</p>
                 <button class="buttons">
-                    <img src="/img/icon/google-icon.svg">
+                    <img class="google-icon" src="/img/icon/google-icon.svg">
                     <span>Masuk dengan Google</span>
                 </button>
             </div>
