--- a/public/register.html
+++ b/public/register.html
@@ -8,6 +8,47 @@
     <link rel="stylesheet" href="/src/register.css">
 </head>
 <body>
-    
+    <div class="register-box">
+        <header>
+            <img class="logo" src="/img/logo/chill-logo.svg" alt="chill-logo">
+            <div class="title">
+                <h3>Daftar</h3>
+                <p>Selamat datang!</p>
+            </div>
+        </header>
+        <form>
+            <fieldset>
+                <div class="label-box">
+                    <label for="username">Username</label>
+                    <input class="input" type="text" id="username" name="username" placeholder="Masukkan username" required>
+                </div>
+                <div class="label-box relative">
+                    <label for="password">Kata Sandi</label>
+                    <input class="input" type="password" id="password" name="password" placeholder="Masukkan kata sandi" required>
+                    <button class="visibility-icon">
+                            <img src="/img/icon/visibility-off.svg">
+                    </button>
+                </div>
+                <div class="label-box relative">
+                    <label for="confirm-password">Konfirmasi Kata Sandi</label>
+                    <input class="input" type="password" id="confirm-password" name="confirm-password" placeholder="Masukkan kata sandi" required>
+                    <button class="visibility-icon">
+                            <img src="/img/icon/visibility-off.svg">
+                    </button>
+                </div>
+            </fieldset>
+            <div class="links">
+                <p>Sudah punya akun? <a href="#">Masuk</a></p>
+            </div>
+            <div class="button-box">
+                <button class="buttons">Masuk</button>
+                <p>Atau</p>
+                <button class="buttons">
+                    <img class="google-icon" src="/img/icon/google-icon.svg">
+                    <span>Masuk dengan Google</span>
+                </button>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
