--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
                     <input class="input" type="text" id="username" name="username" placeholder="Masukkan username" required>
                 </div>
                 <div class="label-box">
-                    <label for="password">Password</label>
+                    <label for="password">Kata Sandi</label>
                     <input class="input" type="password" id="password" name="password" placeholder="Masukkan kata sandi" required>
                     <button class="visibility-icon">
                             <img src="/img/icon/visibility-off.svg">
