connecting 2 files in <a> element

--- a/public/register.html
+++ b/public/register.html
@@ -38,7 +38,7 @@
                 </div>
             </fieldset>
             <div class="links">
-                <p>Sudah punya akun? <a href="#">Masuk</a></p>
+                <p>Sudah punya akun? <a href="index.html">Masuk</a></p>
             </div>
             <div class="button-box">
                 <button class="buttons">Masuk</button>
