--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
                     <input class="input" type="text" id="username" name="username" placeholder="Masukkan username" required>
                 </div>
                 <div class="label-box">
-                    <label for="password">Kata Sandi</label>
+                    <label for="password">Password</label>
                     <input class="input" type="password" id="password" name="password" placeholder="Masukkan kata sandi" required>
                     <button class="visibility-icon">
                             <img src="/img/icon/visibility-off.svg">
@@ -31,7 +31,7 @@
                 </div>
             </fieldset>
             <div class="links">
-                <p>Belum punya akun?<a href="#">Daftar</a></p>
+                <p>Belum punya akun?<a href="register.html">Daftar</a></p>
                 <p><a href="#">Lupa kata sandi?</a></p>
             </div>
             <div class="button-box">
