--- a/public/homepage.html
+++ b/public/homepage.html
@@ -8,6 +8,234 @@
     <link rel="stylesheet" href="/src/homepage.css">
 </head>
 <body>
-    
+    <header class="header">
+        <div class="nav-box">
+            <a href="homepage.html">
+                <img src="/img/logo/chill-logo.svg">
+            </a>
+            <nav class="nav">
+                <a href="#">Series</a>
+                <a href="#">Film</a>
+                <a href="#">Daftar Saya</a>
+            </nav>
+        </div>
+        <div class="avatar-profile">
+            <img src="/img/icon/avatar.svg">
+            <img src="/img/icon/KeyboardArrowDown.svg">
+        </div>
+    </header>
+    <main class="main">
+        <section class="hero-section">
+            <div class="preview-info">
+                <div class="hero-title">
+                    <h1>Duty After School</h1>
+                    <p>Sebuah benda tak dikenal mengambil alih dunia. Dalam keputusasaan, Departemen Pertahanan mulai merekrut lebih banyak tentara, termasuk siswa sekolah menengah. Mereka pun segera menjadi pejuang garis depan dalam perang.</p>
+                </div>
+                <div class="button-box">
+                    <div class="interaction-btn">
+                        <button class="start-btn">Mulai</button>
+                        <button class="more-info">Selengkapnya</button>
+                        <button class="age-restricted">18+</button>
+                    </div>
+                    <div class="mutedBtn-box">
+                        <button class="muted-button">
+                            <img src="/img/icon/volume-off.svg">
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="continueStreaming-section">
+            <header>
+                <h4>Melanjutkan Tonton Film</h4>
+            </header>
+            <div class="landscape-posters">
+                <div class="left-arrowbox">
+                    <img class="arrow-left" src="/img/icon/arrow-left.svg">
+                </div>
+                <div class="landscape-box">
+                    <img src="/img/landscape/img-31.png">
+                    <div class="description-film">
+                        <p>Don't Look Up</p>
+                        <p><span class="star"></span>4.5/5</p>
+                    </div>
+                </div>
+                <div class="landscape-box">
+                    <img src="/img/landscape/img-12.png">
+                    <div class="description-film">
+                        <p>The Batman</p>
+                        <p><span class="star"></span>4.2/5</p>
+                    </div>
+                </div>
+                <div class="landscape-box">
+                    <img src="/img/landscape/img-5.png">
+                    <div class="description-film">
+                        <p>Blue Lock</p>
+                        <p><span class="star"></span>4.6/5</p>
+                    </div>
+                </div>
+                <div class="landscape-box">
+                    <img src="/img/landscape/img-9.png">
+                    <div class="description-film">
+                        <p>A Man Called Otto</p>
+                        <p><span class="star"></span>4.4/5</p>
+                    </div>
+                </div>
+                <div class="right-arrowbox">
+                    <img class="arrow-right" src="/img/icon/arrow-right.svg">
+                </div>
+            </div>
+        </section>
+        <section class="topFilms-section">
+            <header>
+                <h4>Top Rating Film dan Series Hari ini</h4>
+            </header>
+            <div class="potrait-posters">
+                <div class="left-arrowbox">
+                    <img class="arrow-left" src="/img/icon/arrow-left.svg">
+                </div>
+                <div class="bookmarked-box potrait-box">
+                    <div class="newEpisode-bookmark">
+                        <span>Episode Baru</span>
+                    </div>
+                    <img src="/img/potrait/img-14.png">
+                </div>
+                <div class="potrait-box">
+                    <img src="/img/potrait/img-25.png">
+                </div>
+                <div class="potrait-box">
+                    <img src="/img/potrait/img-29.png">
+                </div>
+                <div class="bookmarked-box potrait-box">
+                    <div class="newEpisode-bookmark">
+                        <span>Episode Baru</span>
+                    </div>
+                    <img src="/img/potrait/img-9.png">
+                </div>
+                <div class="potrait-box">
+                    <img src="/img/potrait/img-12.png">
+                </div>
+                <div class="right-arrowbox">
+                    <img class="arrow-right" src="/img/icon/arrow-right.svg">
+                </div>
+            </div>
+        </section>
+        <section class="trendingFilm-section">
+            <header>
+                <h4>Film Trending</h4>
+            </header>
+            <div class="potrait-posters">
+                <div class="left-arrowbox">
+                    <img class="arrow-left" src="/img/icon/arrow-left.svg">
+                </div>
+                <div class="bookmarked-box potrait-box">
+                    <div class="bookmark">
+                        <span>Top</span>
+                        <span>10</span>
+                    </div>
+                    <img src="/img/potrait/img-7.png">
+                </div>
+                <div class="bookmarked-box potrait-box">
+                    <div class="bookmark">
+                        <span>Top</span>
+                        <span>10</span>
+                    </div>
+                    <img src="/img/potrait/img-16.png">
+                </div>
+                <div class="bookmarked-box potrait-box">
+                    <div class="bookmark">
+                        <span>Top</span>
+                        <span>10</span>
+                    </div>
+                    <img src="/img/potrait/img-30.png">
+                </div>
+                <div class="bookmarked-box potrait-box">
+                    <div class="bookmark">
+                        <span>Top</span>
+                        <span>10</span>
+                    </div>
+                    <img src="/img/potrait/img-10.png">
+                </div>
+                <div class="bookmarked-box potrait-box">
+                    <div class="bookmark">
+                        <span>Top</span>
+                        <span>10</span>
+                    </div>
+                    <img src="/img/potrait/img-6.png">
+                </div>
+                <div class="right-arrowbox">
+                    <img class="arrow-right" src="/img/icon/arrow-right.svg">
+                </div>
+            </div>
+        </section>
+        <section class="newRelease-section">
+            <header>
+                <h4>Rilis Baru</h4>
+            </header>
+            <div class="potrait-posters">
+                <div class="left-arrowbox">
+                    <img class="arrow-left" src="/img/icon/arrow-left.svg">
+                </div>
+                <div class="bookmarked-box potrait-box">
+                    <div class="newEpisode-bookmark">
+                        <span>Episode Baru</span>
+                    </div>
+                    <img src="/img/potrait/img-6.png">
+                </div>
+                <div class="potrait-box">
+                    <img src="/img/potrait/img-17.png">
+                </div>
+                <div class="potrait-box">
+                    <img src="/img/potrait/img-12.png">
+                </div>
+                <div  class="bookmarked-box potrait-box">
+                    <div class="newEpisode-bookmark">
+                        <span>Episode Baru</span>
+                    </div>
+                    <img src="/img/potrait/img-9.png">
+                </div>
+                <div class="potrait-box">
+                    <img src="/img/potrait/img-13.png">
+                </div>
+                <div class="right-arrowbox">
+                    <img class="arrow-right" src="/img/icon/arrow-right.svg">
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+        <div class="footer-header">
+            <img src="/img/logo/chill-logo.svg">
+            <p>@2023 Chill All Rights Reserved.</p>
+        </div>
+        <div class="genre">
+            <p>Genre</p>
+            <nav class="nav">
+                <a href="#">Aksi</a>
+                <a href="#">Anak-anak</a>
+                <a href="#">Anime</a>
+                <a href="#">Britania</a>
+                <a href="#">Drama</a>
+                <a href="#">Fantasi Ilmiah & Fantasi</a>
+                <a href="#">Kejahatan</a>
+                <a href="#">KDrama</a>
+                <a href="#">Komedi</a>
+                <a href="#">Petualangan</a>
+                <a href="#">Perang</a>
+                <a href="#">Romantis</a>
+                <a href="#">Sains & Alam</a>
+                <a href="#">Thriller</a>
+            </nav>
+        </div>
+        <div class="helps">
+            <p>Bantuan</p>
+            <nav class="nav">
+                <a href="#">FAQ</a>
+                <a href="#">Kontak Kami</a>
+                <a href="#">Privasi</a>
+                <a href="#">Syarat & Ketentuan</a>
+            </nav>
+        </div>
+    </footer>
 </body>
 </html>
