dev: fix uncorrect href on favicon

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign In | Chill Streaming</title>
-    <link rel="icon" href="/img/logo/chill-logo.png" type="image/png">
+    <link rel="icon" href="/img/logo/chill-logo.svg" type="image/png">
     <link rel="stylesheet" href="/src/login.css">
 </head>
 <body>
